--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: medfatetraits
 Type: Package
-Title: From plant trait data bases to medfate species parameters
+Title: From plant trait data to model parameters
 Version: 0.1.0
 Authors@R: c(
 	person('Miquel', 'De Cáceres', role=c('aut','cre', 'cph'), email='miquelcaceres@gmail.com', comment = c(ORCID = "0000-0001-7132-2080")),
@@ -14,6 +14,10 @@ Maintainer: The package maintainer <yourself@somewhere.net>
 Description: Utility functions to facilitate harmonizing plant trait data bases and defining species parameter tables for medfate.
 License: GPL (>= 2)
 Depends: R (>= 3.4.0), medfate (>= 4.0.0)
+Imports: 
+    dplyr,
+    cli,
+    taxize
 Suggests: 
     testthat (>= 3.0.0),
     knitr,
