--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(complete_strict)
 export(fill_traits)
 export(harmonize_taxonomy_WFO)
 export(init_spparams)
+export(populate_traits)
 import(medfate)
 importFrom(WorldFlora,WFO.match)
 importFrom(WorldFlora,WFO.one)
