more files from medfateutils

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,13 @@ export(complete_strict)
 export(fill_traits)
 export(harmonize_taxonomy_WFO)
 export(init_spparams)
+export(populate_GrowthForm)
+export(populate_height_params)
+export(populate_shrub_allometries_from_medfuels)
 export(populate_traits)
+export(populate_tree_allometries)
+export(populate_tree_diameterHeight_params)
+export(translate_species_codes)
 import(medfate)
 importFrom(WorldFlora,WFO.match)
 importFrom(WorldFlora,WFO.one)
