--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(complete_strict)
 export(fill_traits)
+export(get_trait_data)
 export(harmonize_taxonomy_WFO)
 export(init_spparams)
+export(load_harmonized_tables)
 export(populate_GrowthForm)
 export(populate_height_params)
 export(populate_shrub_allometries_from_medfuels)
@@ -23,6 +25,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,left_join)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
+importFrom(memoise,memoise)
 importFrom(readr,read_delim)
 importFrom(taxize,classification)
 importFrom(taxize,get_gbifid_)
