--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
 home:
   links:
-  - text: Medfate Package
+  - text: medfate package
     href: https://emf-creaf.github.io/medfate/index.html
   - text: Reference book
     href: https://emf-creaf.github.io/medfatebook/index.html
