--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,9 @@ Title: From plant traits to model parameters
 Version: 0.1.0
 Authors@R: c(
 	person('Miquel', 'De Cáceres', role=c('aut','cre', 'cph'), email='miquelcaceres@gmail.com', comment = c(ORCID = "0000-0001-7132-2080")),
-  person('Víctor', 'Granda', role='aut', comment = c(ORCID = "0000-0002-0469-1991")),
-  person('Adriana', 'Tovar', role='aut'),
-	person('Antoine', 'Cabon', role='aut', comment = c(ORCID = "0000-0001-6426-1726")),
 	person('Nicolas', 'Martin-StPaul', role='aut', comment = c(ORCID = "0000-0001-7574-0108")),
-	person('Arsène', 'Druel', role='aut', comment = c(ORCID = "0000-0002-3938-0085"))
+  person('Adriana', 'Tovar', role='aut'),
+  person('Víctor', 'Granda', role='aut', comment = c(ORCID = "0000-0002-0469-1991"))
   )
 Description: Utility functions to facilitate harmonizing plant trait data bases and defining species parameter tables for process-based models.
 License: GPL (>= 2)
