--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,7 +6,7 @@ home:
     href: https://emf-creaf.github.io/medfatebook/index.html
 
 articles:
-- title: Database harmonization
+- title: Trait database harmonization
   contents:
     - starts_with("Trait")
 
@@ -15,28 +15,24 @@ articles:
     - starts_with("Species")
 
 reference:
-- title: Trait harmonization
+- title: Trait database harmonization
   desc:  Harmonization of plant trait databases
   contents:
   - starts_with("harmonize")
   - starts_with("check_harmonized_table")
   - HarmonizedTraitDefinition
 
-- title: Species parameter initialization
+- title: Building species parameter tables for medfate
   desc:  Creation of species parameter tables
   contents:
   - init_spparams
   - translate_species_codes
-
-- title: Species parameter estimation
-  desc:  Species parameter estimation
-  contents:
   - starts_with("get_trait")
   - starts_with("fill_traits")
   - starts_with("populate")
   - complete_strict
 
-- title: Species parameter datasets
+- title: Species parameter datasets for medfate
   desc:  Species parameter datasets for different countries
   contents:
     - starts_with("SpParams")
