--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,15 +22,20 @@ reference:
   - starts_with("check_harmonized_table")
   - HarmonizedTraitDefinition
 
+- title: Load harmonized trait data
+  desc:  Load harmonized trait data
+  contents:
+  - starts_with("get_trait")
+
 - title: Building species parameter tables for medfate
   desc:  Creation of species parameter tables
   contents:
   - init_spparams
   - translate_species_codes
-  - starts_with("get_trait")
   - starts_with("fill_traits")
   - starts_with("populate")
   - complete_strict
+  - check_spparams
 
 - title: Species parameter datasets for medfate
   desc:  Species parameter datasets for different countries
