--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export(check_harmonized_table)
 export(check_spparams)
 export(complete_strict)
-export(fill_traits)
+export(fill_harmonized_traits)
+export(fill_inventory_traits)
 export(get_trait_data)
 export(harmonize_taxonomy_WFO)
 export(init_spparams)
@@ -11,9 +12,9 @@ export(load_harmonized_tables)
 export(populate_GrowthForm)
 export(populate_height_params)
 export(populate_shrub_allometries_from_medfuels)
+export(populate_traits)
 export(populate_tree_allometries)
 export(populate_tree_diameterHeight_params)
-export(translate_species_codes)
 import(medfate)
 importFrom(WorldFlora,WFO.match)
 importFrom(WorldFlora,WFO.one)
@@ -28,6 +29,8 @@ importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(memoise,memoise)
 importFrom(readr,read_delim)
+importFrom(stats,family)
+importFrom(stats,quantile)
 importFrom(taxize,classification)
 importFrom(taxize,get_gbifid_)
 importFrom(tibble,as_tibble)
