--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown
+BugReports: https://github.com/emf-creaf/traits4models/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
