--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(complete_medfate_strict)
 export(fill_medfate_allometries)
 export(fill_medfate_inventory_traits)
 export(fill_medfate_traits)
+export(get_allometry_data)
 export(get_taxon_data)
 export(get_trait_data)
 export(harmonize_taxonomy_WFO)
