--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,3 +29,4 @@ BugReports: https://github.com/emf-creaf/traits4models/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+Config/testthat/edition: 3
