--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(memoise,memoise)
 importFrom(readr,read_delim)
+importFrom(rlang,.data)
 importFrom(stats,family)
 importFrom(stats,quantile)
 importFrom(taxize,classification)
