--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(init_medfate_params)
 export(load_harmonized_allometry_tables)
 export(load_harmonized_trait_tables)
 export(populate_traits)
+import(data.table)
 import(medfate)
 importFrom(WorldFlora,WFO.match)
 importFrom(WorldFlora,WFO.one)
