--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,5 +34,7 @@ importFrom(stats,family)
 importFrom(stats,quantile)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(utils,data)
 importFrom(utils,read.csv2)
