new function get_taxon_trait_means

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(fill_medfate_inventory_traits)
 export(fill_medfate_traits)
 export(get_allometry_data)
 export(get_taxon_data)
+export(get_taxon_trait_means)
 export(get_trait_data)
 export(harmonize_taxonomy_WFO)
 export(init_medfate_params)
@@ -37,4 +38,6 @@ importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(utils,data)
+importFrom(utils,packageVersion)
 importFrom(utils,read.csv2)
+importFrom(utils,write.csv2)
